fixing feature set on ie

--- a/style.css
+++ b/style.css
@@ -217,7 +217,7 @@ a {
   height: 300px;
   align-items: center;
   justify-content: center;
-  margin: 20px 60px 0 60px;
+  padding: 20px 60px 0 60px;
 }
 
 .feature_img {
@@ -225,6 +225,11 @@ a {
   margin-bottom: 10px;
   height: 80px;
   margin-bottom: 40px;
+}
+
+.feature_img img {
+  height: 80px;
+  width: auto;
 }
 
 .feature_info {
@@ -245,6 +250,7 @@ a {
 .feature p {
   margin: 0px;
   text-align: center;
+  max-width: 100%;
 }
 /*  PRICING  */
 
@@ -706,7 +712,7 @@ a {
     height: 100px;
   }
 
-  .feature object {
+  .feature img {
     width: 80px;
   }
 
